Color selections and contrast of toast fixed

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -67,7 +67,7 @@ a {
       }
       .resto-img {
       width: 100%;
-      height: 150px;
+      height: auto;
       background-size: cover;
     }
 
@@ -285,4 +285,13 @@ label{
 }
 .required{
   color: #6C0303;
+}
+
+.paper-toast-0 {
+    background: #323232;
+    color: #000000;
+    
+}
+.paper-toast-0 a{
+  color:#ffffff;
 }
